updated responsive design for archive page and fixed footer overlapping

--- a/src/styles/archive.module.css
+++ b/src/styles/archive.module.css
@@ -20,7 +20,7 @@
   font-family: "Karla";
   width: 60%;
   text-align: center;
-  font-size: 1.25rem;
+  font-size: 1rem;
   color: var(--white);
   margin-bottom: 20px;
 }
@@ -66,7 +66,10 @@ tbody tr:hover {
   margin-right: 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
+  .archive-container {
+    width: 100%;
+  }
   .mobileHide {
     display: none;
   }
