--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,8 +1,6 @@
 .footer {
-  min-height: 70px;
-  height: auto;
+  height: 100px;
   width: 100%;
-  padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
